fix(sidebar): make main content clickable on mobile

--- a/pages/styles/queries.css
+++ b/pages/styles/queries.css
@@ -19,6 +19,11 @@
     position: absolute;
     z-index: 1;
   }
+  #Foreground > #Sidebar > div {
+    overflow: visible;
+    width: 100vw;
+  }
+
   #Foreground > #MainContent {
     max-width: unset;
   }
@@ -101,9 +106,9 @@
     transition: 0.33s opacity cubic-bezier(0, 1, 1, 1);
     pointer-events: none;
     background: radial-gradient(#000000ff, #101010ff);
-    -webkit-mask-image: linear-gradient(-90deg, #000000ff, #000000ff, #00000000);
+    -webkit-mask-image: linear-gradient(-90deg, #000000ff, #000000ff, #000000ff, #00000000);
     max-width: unset;
-    width: 100%;
+    width: 50vw;
   }
   #Foreground input[type="checkbox"]:checked + #Sidebar {
     opacity: 1;
